adjusted max width of va-banner--inner to fix right alignment

--- a/src/sass/base/_va.scss
+++ b/src/sass/base/_va.scss
@@ -829,7 +829,7 @@ li {
 
   &-inner {
     margin: auto;
-    max-width: 97rem;
+    max-width: 97.5rem;
     position: relative;
   }
 
